vlib/v/checker/tests/match_last_branch_only_casted.vv
fn main() {
	name := 'b'
	nb := match name {
		'a' { 10 }
		'b' { 500 }
		else { u64(345454) }
	}

	println(nb)
}
